--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -111,7 +111,7 @@ en:
     placeholder: laurenmayberry@example.com
     unsubscribe: You can unsubscribe at any time.
     privacy: Privacy Policy
-    
+
   about:
     first_section_text: Your Complex coding and marking challenges don't require complex and expensive solution
     second_section_title: Our Mission
@@ -184,8 +184,15 @@ en:
     nigeria: Nigeria
     sweden: Sweden
     be_the_next: Be the next one
-    
+
+  cost_of_ownership:
+    first_section_title: Save big with the BLANK
+    first_section_text: "Helping businesses improve efficiency: Avoid getting locked into an expensive inkjet printer that will drain your budget over time. Learn warranty details, service terms, maintenance/repairs costs, ink & consumables costs. Gain the confidence to choose the most cost-effective solution for your business. Calculate the total cost of ownership of your printer before taking a decision"
+    second_section_title: Savings/ROI Calculator
+    second_section_text: Easily control your cost per print and the number of print per cartridge. It has never been easier to keep your cost down! Save up to 75% of ink  with our Ink saver mode
+
   components:
     yellow_button: Learn More
+
 
 
