added countries to seeds and distributor page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -272,7 +272,7 @@ en:
     seventh_section_title: Flawless prints, every time
     seventh_section_text: We value simplicity and ease of use. Less is more. Simplest, most efficient way possible to code your product. Less components for maximum reliability.
 
-  fxone_remote:
+  fxone_standard:
     first_section_title: BLANK STANDARD
     first_section_text: Printer for all your case coding application
     second_section_title: Overview
