--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,7 @@ en:
     about: About
     careers: Careers
     news: News & Events
+    privacy_policy: Privacy Policy
 
   cookie_bar:
     content: By using this website, you agree to our
