added printer mimi menu

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,9 @@ en:
     logout: Logout
     contact: Contact Us
     printers: Printers
+    printer_one: FX ONE Standard
+    printer_two: FX ONE Remote
+    printer_three: FX ONE Plus
     software: Software
     inks: Inks & Consumables
     distributors: Worldwide Distributors
