faq copy in, still needs work to make responsive and expandable tabs fit content

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -54,6 +54,58 @@ en:
   faq:
     title: Frequently Asked Questions
     tagline: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio commodi quod laudantium asperiores a consectetur, repudiandae at, debitis dicta, exercitationem reprehenderit aliquam quis iusto laborum nostrum libero suscipit magni! Vero.
+    title1: What is the FX ONE Printer?
+    desc1: The FX One is the all-in-one printer device that is made for use by everyone. No expertise required. Setup in minutes, and can run on the vast majority of production lines. What does it do? It can print virtually on any product anything from a simple use by date, to a complex lot number, a live counter, date and time or a shift code, a barcodes and much more.  In addition to those features, the FX One will come with upgrades  in order to bring you the most cutting edge developments and applications in the coding and marking ecosystem. Check out this 
+    desc1vid: video
+    desc1end:  to see how simple and powerful it really is to use.
+    title2: What language(s) do you support?
+    desc2: You can print in any languages without any limitation
+    desc2end: Regarding the software interface, it supports 16 languages, but we will be adding other languages soon.  If you have language requests, please send them to sales@foenixcoding.com
+    title3: What are the Dimensions?
+    desc3: It is  242mm by 178mm by 90mm or if you prefer 9.52 inches by 7 inches by 3.54 inches.
+    title4: Where can I find official Foenix distributors?
+    desc4_1: Through our large network of distributor we are present on every continents and we are able to offer that printers in almost every country
+    desc4_2: We believe we can only fully guarantee consistent product quality and the best customer service by offering them by our local representatives.
+    desc4_3: Our existing distributors range is from small one-person companies to international corporations. By experience we found that not size but commitment, extensive local market knowledge and relevant contacts and competences are the key factors to success.
+    dec4_4: Our resellers are always there for you offering
+    desc4_5: Prompt, professional support in your time zone and language.
+    desc4_6: Fast and cost-effective shipping.
+    desc4_7: Reliable local warranty service.
+    desc4_8: Please do not hesitate to 
+    desc4_9: contact us
+    desc4_10: if you have any questions or would like to receive more information about our resellers.
+    title5: Why can’t I sign in?
+    desc5: Our log in page is only available for our existing distributors to give them access to their personalized dashboard. It is not possible for anyone else to have access to this page. If you are a FOENIX distributor and don’t have yet access to your dashboard please let us know.
+    title6: Can I get a free trial before I purchase? 
+    desc6_1: If you are based in the UK Yes
+    desc6_2: You can get one free, seven-day trial.
+    desc6_3: During the free trial, you’ll have access to all the printer functionality and will be able to monitor the cost per print and quickly see how much money you could save using our printer.
+    desc6_4: Free trial is subject to availability.
+    title7: If I own different Foenix printers – standard or remote - will I need a separate Software for each one?
+    desc7: No. All our printer are fully compatible with our Software. No matter the model you are using you can monitor all your printers from the FX APP.
+    title8: What are the differences between the FX ONE Standard and FX ONE Remote printer?
+    desc8_1: The FX One Standard is the perfect printer for all the case coding application. It works with oil based ink for porous surfaces and will give you excellent result to print on the side of a carton.
+    desc8_2: You can print anything from 8 lines of simple text to variable barcodes, expiry dates, logo, shift, counters, external data from database, QR codes…
+    desc8_3: This printer will print in high resolution with a 18mm print height.
+    desc8_4: It has the lowest cost per print on the market, it is the most efficient way for you to print information on a box.
+    desc8_5: The FX One Remote also has a high resolution 18mm height print head.
+    desc8_6: The Remote printer comes in 2 models, either manual shutter or motorized shutter.
+    desc8_7: This printer works either with oil based ink for porous surfaces (like carton, paper, wood…) or solvent based ink for non-porous surfaces (like plastic, metal, glass…).
+    desc8_8: You can virtually print on any products with that printer.
+    title9_1: FX One Remote
+    title9_2: Motorized or Manual shutter, what is the difference?
+    desc9: The FX ONE remote printer has a shutter to protect the printhead. With the motorized version the shutter will closed automatically after printing. With the manual version you will have to open the shutter manually at the beginning of the day and close it manually at the end of the day when the production stops.
+    title10: Can I print on the top of a product?
+    desc10: Yes, With the remote printhead and you can technically print to any angle
+    title11: What type of ink do you offer? 
+    desc11_1: We have high quality controlled inks that are odourless and are not M.E.K based. The piezo technology used in the Foenix printers only needs a single sealed ink cartridge and does not require additional make-up solvent. This substantially reduces operating costs. 
+    desc11_2: We offer Oil based ink to print on porous materials (trays, carton, wood...) and solvent based ink to print on non-porous materials (metal, plastic, glass...)
+    title12: Are there maintenance contracts?
+    desc12_1: No costly maintenance contracts.
+    desc12_2: Foenix printers are manufactured with minimal components to give maximum reliability. No pumps, no valves, no compressed air, no droplet charging and no air filters mean very low maintenance.
+    title13: How can I be sure I’ll be saving money with FX ONE printer?
+    desc13_1: Our software has the feature to calculate the number of print per cartridges and the cost per print for every message you will create on the FX APP.
+    desc13_2: It is a very powerful tool because you can see how much money you will be saving using our printer. You are in control of the costs
 
   home:
     # FIRST SECTION
@@ -149,7 +201,7 @@ en:
     first_card_text: For applications in the food, beverage, cosmetics, household goods, industrial and extrusion markets, we have high quality controlled inks that are virtually odourless and are not M.E.K based. We also offer coloured inks.
     second_card_title: Sealed ink cartridge
     second_card_text: An integral and replaceable ink cartridge maintains a clean ink system free of contamination. Our inks have a excellent adhesion and contrast on a wide range of porous and non-porous materials such as carton, metal, glass, paper, wood, and many plastics. Our inks offers outstanding performance under most common application conditions.
-    third_section_text: We now offer a High Adhesion Ink specially designed for PVC extrusion application. Get unprecedented print quality on PVC pipes!
+    third_section_text: We now offer a High Adhesion Ink specially designed for PVC extrusion application. Get unprecedented print quality on PVC pipes
 
   distributor:
     first_section_title: Global Reach
