Tabs now have timers which reset on openCity click

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -31,3 +31,11 @@ fr:
     about: À propos de nous
     careers: Carrières
     news: Nouvelles et événements
+
+    jobs:
+    title: FOENIX CODING is growing
+    tagline: We are always looking for talented new friends that share our vision to push industry forward
+
+  faq:
+    title: Frequently Asked Questions
+    tagline: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio commodi quod laudantium asperiores a consectetur, repudiandae at, debitis dicta, exercitationem reprehenderit aliquam quis iusto laborum nostrum libero suscipit magni! Vero.
