fixed various bits and bobs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -111,8 +111,8 @@ en:
     # FIRST SECTION
     title: Coding and Marking Made
     title_span1: Easy
-    title_span2: hard
-    title_span3: medium
+    title_span2: Medium
+    title_span3: Hard
     title_description: Plug-and-play Industrial inkjet Printer for all types of production lines.
     #SECOND SECTION
     title_second: Stress-free product traceability
