--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -109,7 +109,9 @@ en:
 
   home:
     # FIRST SECTION
-    title: Coding and Marking Made
+    title: Coding and Marking
+    title_bottom: Made
+    mobile_title: Coding and Marking Made
     title_span1: Easy
     title_span2: Medium
     title_span3: Hard
@@ -146,6 +148,8 @@ en:
     second_column_two_six_six: Paper
     second_column_two_seven_seven: Pipes
     #THIRD SECTION
+    home_video_title: Printer
+    home_video_text: Helping businesses improve efficiency and lower production costs
     tabs_title: One software with tons of features
     tabs_one: Lorem ipsum
     tabs_one_title: Zero Downtime, No Maintenance
