Carousel now highlights the appropriate tab and has responsive image sizing

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -157,23 +157,23 @@ en:
     tabs_one_bottom: From emerging businesses with 1 small production line to
     tabs_two: Dolor sit
     tabs_two_title: Two Zero Downtime, No Maintenance
-    tabs_two_description: From emerging businesses with 1 small production line to multinational corporations with the most demanding applications, use the FX ONE printer to lower your coding and marking costs, prevent downtime,
+    tabs_two_description: Number two. From emerging businesses with 1 small production line to multinational corporations with the most demanding applications, use the FX ONE printer to lower your coding and marking costs, prevent downtime,
     tabs_two_bottom: From emerging businesses with 1 small production line to
     tabs_three: Amet bolor
     tabs_three_title: Three Zero Downtime, No Maintenance
-    tabs_three_description: From emerging businesses with 1 small production line to multinational corporations with the most demanding applications, use the FX ONE printer to lower your coding and marking costs, prevent downtime,
+    tabs_three_description: Test three. From emerging businesses with 1 small production line to multinational corporations with the most demanding applications, use the FX ONE printer to lower your coding and marking costs, prevent downtime,
     tabs_three_bottom: From emerging businesses with 1 small production line to
     tabs_four: Sianisi
     tabs_four_title: Four Zero Downtime, No Maintenance
-    tabs_four_description: From emerging businesses with 1 small production line to multinational corporations with the most demanding applications, use the FX ONE printer to lower your coding and marking costs, prevent downtime,
+    tabs_four_description: Four to the floor. From emerging businesses with 1 small production line to multinational corporations with the most demanding applications, use the FX ONE printer to lower your coding and marking costs, prevent downtime,
     tabs_four_bottom: From emerging businesses with 1 small production line to
     tabs_five: Lorempsi
     tabs_five_title: Five Zero Downtime, No Maintenance
-    tabs_five_description: From emerging businesses with 1 small production line to multinational corporations with the most demanding applications, use the FX ONE printer to lower your coding and marking costs, prevent downtime,
+    tabs_five_description: Five alive. From emerging businesses with 1 small production line to multinational corporations with the most demanding applications, use the FX ONE printer to lower your coding and marking costs, prevent downtime,
     tabs_five_bottom: From emerging businesses with 1 small production line to
     tabs_six: Superfot
     tabs_six_title: Six Zero Downtime, No Maintenance
-    tabs_six_description: From emerging businesses with 1 small production line to multinational corporations with the most demanding applications, use the FX ONE printer to lower your coding and marking costs, prevent downtime,
+    tabs_six_description: Six pick up sticks. From emerging businesses with 1 small production line to multinational corporations with the most demanding applications, use the FX ONE printer to lower your coding and marking costs, prevent downtime,
     tabs_six_bottom: From emerging businesses with 1 small production line to
     printer: Printer
     fxone_subtext: Helping businesses improve efficiency and lower production costs
